[package]
name = "rpckafka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
# uuid = { version = "0.8.2", features = ["v4", "serde"] } #https://github.com/serde-rs/serde/issues/324
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
serde_with = { version = "1.4.0", features = ["json"] }
kafka = "0.8"
lazy_static = "1.4.0"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
hex = "*"
bincode = "1"

[dependencies.transaction]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"
[dependencies.quisquis-rust]
git = "ssh://github.com/twilight-project/quisquis-rust.git"
branch = "develop"
[dependencies.zkvm]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"
[dependencies.zkschnorr]
git = "ssh://github.com/twilight-project/zk-schnorr.git"
[dependencies.address]
git = "ssh://github.com/twilight-project/zkos-rust.git"
branch = "updated-rpc"
[dependencies.zkos-relayer-wallet]
git = "ssh://github.com/twilight-project/zkos-relayer-wallet.git"
branch = "develop-rust"
[dependencies.zkos-client-wallet]
git = "ssh://github.com/twilight-project/zkos-client-wallet.git"
branch = "develop-rust"


# [dependencies.transaction]
# path = "../../ZkOS/transaction"
# [dependencies.quisquis-rust]
# path = "../../quisquis-rust"
# [dependencies.zkvm]
# path = "../../ZkOS/zkvm"
# [dependencies.zkschnorr]
# path = "../../ZkSchnorr"
# [dependencies.address]
# path = "../../ZkOS/address"
# [dependencies.zkos-relayer-wallet]
# path = "../../zkos-relayer-wallet"
# [dependencies.zkos-client-wallet]
# path = "../../zkos-client-wallet"
