[package]
name = "order-api"
version = "0.1.0"
edition = "2021"
authors = ["Twilight Project"]
description = "A high-throughput JSON-RPC service for submitting, updating, and managing orders on the Twilight Relayer Core"
license = "Apache-2.0"
repository = "https://github.com/twilight-project/relayer-order-api"
readme = "README.md"
keywords = ["relayer", "order-api", "json-rpc", "twilight", "kafka"]
categories = ["web-programming", "api-bindings", "cryptography"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = "1.0.131"
serde_derive = "1.0.131"
serde_json = "1.0.68"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
serde_with = { version = "1.4.0", features = ["json"] }
kafka = "0.8"
lazy_static = "1.4.0"
jsonrpc = "0.12.1"
jsonrpc-http-server = "18.0"
jsonrpc-core = "18.0.0"
hex = "*"
bincode = "1.3.3"

[dependencies.transaction]
git = "https://github.com/twilight-project/zkos-rust.git"
branch = "develop"
[dependencies.quisquis-rust]
git = "https://github.com/twilight-project/quisquis-rust.git"
branch = "develop"
[dependencies.zkvm]
git = "https://github.com/twilight-project/zkos-rust.git"
branch = "develop"
[dependencies.zkschnorr]
git = "https://github.com/twilight-project/zk-schnorr.git"
[dependencies.address]
git = "https://github.com/twilight-project/zkos-rust.git"
branch = "develop"
[dependencies.twilight-relayer-sdk]
git = "https://github.com/twilight-project/twilight-relayer-sdk.git"
branch = "develop"
